@@ -641,12 +641,10 @@ public class ShuffleVertexManager extends VertexManagerPlugin {
    */
   @VisibleForTesting
   boolean determineParallelismAndApply() {
-    if(numBipartiteSourceTasksCompleted == 0) {
-      return true;
-    }
-    
     if(numVertexManagerEventsReceived == 0) {
-      return true;
+      if (totalNumBipartiteSourceTasks > 0) {
+        return true;
+      }
     }
     
     int currentParallelism = pendingTasks.size();
@@ -669,8 +667,11 @@ public class ShuffleVertexManager extends VertexManagerPlugin {
       return false;
     }
 
-    long expectedTotalSourceTasksOutputSize =
-        (totalNumBipartiteSourceTasks * completedSourceTasksOutputSize) / numVertexManagerEventsReceived;
+    long expectedTotalSourceTasksOutputSize = 0;
+    if (numVertexManagerEventsReceived > 0 && totalNumBipartiteSourceTasks > 0 ) {
+      expectedTotalSourceTasksOutputSize =
+          (totalNumBipartiteSourceTasks * completedSourceTasksOutputSize) / numVertexManagerEventsReceived;
+    }
 
     int desiredTaskParallelism = 
         (int)(
@@ -770,8 +771,10 @@ public class ShuffleVertexManager extends VertexManagerPlugin {
       }
       getContext().doneReconfiguringVertex();
     }
-    //Sort in case partition stats are available
-    sortPendingTasksBasedOnDataSize();
+    if (totalNumBipartiteSourceTasks > 0) {
+      //Sort in case partition stats are available
+      sortPendingTasksBasedOnDataSize();
+    }
     List<ScheduleTaskRequest> scheduledTasks = Lists.newArrayListWithCapacity(numTasksToSchedule);
 
     while(!pendingTasks.isEmpty() && numTasksToSchedule > 0) {
