@@ -9,6 +9,8 @@ INCOMPATIBLE CHANGES
   TEZ-2949. Allow duplicate dag names within session for Tez.
 
 ALL CHANGES:
+  TEZ-2956. Handle auto-reduce parallelism when the
+  totalNumBipartiteSourceTasks is 0
   TEZ-2947. Tez UI: Timeline, RM & AM requests gets into a consecutive loop in counters page without any delay
   TEZ-2946. Tez UI: At times RM return a huge error message making the yellow error bar to fill the whole screen
   TEZ-2949. Allow duplicate dag names within session for Tez.
